Adding temporal measures for allen algebra mappers. Adding measure in MeasureFactory.